Changed Windows SDK version and platform toolset

--- a/vs2017/warble.vcxproj.filters
+++ b/vs2017/warble.vcxproj.filters
@@ -61,6 +61,7 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="$(LibDef)" />
+    <ClInclude Include="$(LibDef)" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\warble\cpp\gatt.cpp">
